# binGPT

./: .gitignore  AMD_requirements.txt  README.md  pyproject.toml  requirements.txt  requirements_AMD.txt  setup.py  tmp.py
bash_scripts/: debug.sh  run_training_GPU.sh
mingpt/: bpe.py  encoderonly.py  model.py  trainer.py
results/: incorrect_preds.npy  plot_incorrect_preds.py  train incorrect_preds.npy
scripts/: 0_train_test_datasets_tent_map.py  1_Hessian.py  1_NN_training.py  1_mlp.py  1_mlp_app.py  1_probe_modify.py  1_vis_gradient_mlp.py  2_eval_transformer.sh  2_probe.py  2_probe_eval.py  2_probe_eval.sh  2_probe_modify.py  2_probe_train.sh  2_transformer.py  2_transformer_eval.py  2_view_internal_state.py  2_view_models.py  main.py  main_binary.ipynb  main_binary.py  main_binary_colab.ipynb  main_decimal.py  modify_weights.py  perturb_component_colab.ipynb  test.py  tmp.py  train.py
utils/: gol.py  optimizers.py  tentmapdataset.py  tokenizer.py
