[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "binGPT"
version = "0.1.0"
description = "Your short project description"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    # "numpy>=1.18.0",
]

# [project.urls]
# Homepage = ""

[tool.setuptools.packages.find]
where = ["."]
